# play-with-data-science

./: README.md
theCCXT/: 1. analyzeForTheStartOfEachMonth.ipynb  pyproject.toml
theCCXT/tests/: test_theccxt.py
