[tool.poetry]
name = "theCCXT"
version = "0.1.0"
description = ""
authors = ["yingshaoxo <yingshaoxo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ccxt = "^1.71.34"
ipykernel = "^6.7.0"
plotly = "^5.5.0"
pandas = "^1.4.0"
nbformat = "^5.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
